# audioTest

./: .coverage  .coveragerc  .env  .gitignore  README.md  TODO.md  backserver.py  demo.opus  index.html  output.webm  playsound.py  pyproject.toml  requirements.txt
exp/: combined.webm  merge_wavs.py  upload.py
experiments/: continuous_recognition.py  ds_exp1.py  ds_translate.py  groq_exp.py  rebuild_wavs.py  record_and_upload.py  test-azure.py  translate_exp2.py  webm_to_wav_converter.py
sonara/: azure_cog.py  backserver.py  groq_translator.py  llm_translate.py  server.py
sonara/exp/: webm_concat_and_segment.py
ssl/: server.crt  server.key
tests/: test_async_translate.py  test_azure_cog_comprehensive.py  test_azure_cog_queue.py  test_basic.py  test_groq_translator.py  test_llm_translate.py  test_server_comprehensive.py  test_translation_queue.py
translate/exp/: helsinki.py  mbart.py
